[project]
name = "sdss-cerebro"
version = "1.3.4a1"
description = "Telemetry management and time series for SDSS-V"
authors = [ { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" } ]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10,<4"

dependencies = [
    "numpy>=2.0.0",
    "sdsstools>=1.9.1",
    "influxdb-client[extra]>=1.9.0",
    "click>=8.0.0",
    "sdss-clu>=2.0.0",
    "ntplib>=0.3.4",
    "daemonocle>=1.0.2",
    "click-default-group>=1.2.2",
    "sdss-drift>=1.2.0",
    "rx>=3.2.0",
    "pymysql>=1.0.2",
    "peewee>=3.15.4",
    "asyncudp>=0.11.0",
    "lvmopstools>=0.5.7",
    "sdss-tpm-multicast-client>=0.3.0",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/sdss/cerebro"
Repository = "https://github.com/sdss/cerebro"
Documentation = "https://sdss-cerebro.readthedocs.io/en/latest/"

[project.scripts]
cerebro = "cerebro.__main__:main"
tpm2influxdb = "cerebro.scripts.tpm2influxdb:main"

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "matplotlib>=3.1.1",
    "pytest>=5.2.2",
    "pytest-cov>=2.8.1",
    "pytest-sugar>=0.9.2",
    "coverage[toml]>=5.0",
    "ipdb>=0.12.3",
    "ruff>=0.9.0",
    "nox>=2025.11.12",
    "ty>=0.0.14",
    "Sphinx>=8.0.0",
    "furo>=2021.9.22",
    "myst-parser>=2.0.0",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-copybutton>=0.4.0",
    "sphinx-click>=3.0.1",
    "sphinx-jsonschema>=1.16.11",
    "sphinx-autodoc-typehints>=1.23.2",
    "doc8>=0.8.0",
    "rstcheck>=3.3.1"
]

[tool.ruff]
line-length = 88
target-version = 'py312'
exclude = ["typings/"]

[ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["cerebro"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu", "drift"]

[tool.pytest.ini_options]
addopts = "--cov cerebro --cov-report xml --cov-report html --cov-report term"

[tool.coverage.run]
branch = true
include = ["cerebro/*"]
omit = [
    "*/__init__.py",
    "*/__main__.py",
    "cerebro/sources/ieb.py",
    "cerebro/sources/tron.py",
    "cerebro/sources/lvm.py"
]

[tool.coverage.report]
exclude_lines = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["cerebro"]

[tool.hatch.build.targets.wheel]
packages = ["cerebro"]
